was created project goal
